[gd_scene load_steps=3 format=3 uid="uid://deibof6jekfnt"]

[ext_resource type="Script" path="res://core/devices/ValveCheck.gd" id="1_h6nii"]
[ext_resource type="Texture2D" uid="uid://caad6bc8st15r" path="res://icons/frame_elements/Valve.png" id="10_pdl5d"]

[node name="ValveCheck" type="Node2D"]
script = ExtResource("1_h6nii")
main_name = ""
sub_name = ""

[node name="ValveLeft" type="Sprite2D" parent="."]
modulate = Color(0.937255, 0.937255, 0.937255, 1)
texture = ExtResource("10_pdl5d")

[node name="ValveRight" type="Sprite2D" parent="."]
modulate = Color(0.937255, 0.937255, 0.937255, 1)
texture = ExtResource("10_pdl5d")
flip_h = true
